--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       <section class="section">
         <div class="container has-text-centered">
           <h2 class="subtitle">
-            <strong>ใบ้หวย</strong> โดย<strong>หลวงปู่เค็น</strong>!
+            <strong>ใบ้หวย</strong> โดย<strong>อาจารย์: อะไรก็ไม่รู้</strong>!
           </h2>
-          <img src="/public/logo.jpg" />
+          <img src="/public/eiei.jpg" />
           <div class="columns">
             <div class="column is-half field">
               <label class="label">ฝันวันไหน</label>
